prevent strategy panel from being fully collapsed when strategy is loading. closes #12417.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@11850 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/Strategy.css
+++ b/View/webapp/wdk/css/Strategy.css
@@ -24,6 +24,7 @@
   position: relative;
   border: 1px solid #000;
   height: 100%;
+  min-height: 150px;
 }
 
 #strategy_results .ui-resizable-handle.ui-resizable-s {
